fixed small issues on smallest view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,10 @@ h2 {
     text-align: center;
 }
 
+#small-view {
+    display: none;
+}
+
 /* up to 400px */
 @media screen and (max-width: 400px) {
     body {
@@ -157,6 +161,10 @@ h2 {
     .crass-center {
         padding-top: 20px;
         width: 90%;
+    }
+
+    #small-view {
+        display: inline;
     }
 }
 
